src/snapshots/monkey_language_server__parser__test__let_statement_broken_1.snap
---
source: src/parser.rs
description: let x = ;
expression: stmts
---
[
    Err(UnexpectedToken("SyntaxError: Unexpected ';'."), (0,8)->(0,9)),
]
