src/snapshots/monkey_language_server__parser__test__lexer_erro.snap
---
source: src/parser.rs
description: "@"
expression: stmts
---
[
    Err(UnexpectedToken("Unexpected token '@'."), (0,0)->(0,1)),
]
