src/snapshots/monkey_language_server__parser__test__operator_precedence_10.snap
---
source: src/parser.rs
description: 5 > 4 == 3 < 4
expression: stmts
---
[
    Infix {
        token: Token(Equal, "==", (0,6)->(0,8)),
        left: Infix {
            token: Token(GT, ">", (0,2)->(0,3)),
            left: Int {
                token: Token(Int, "5", (0,0)->(0,1)),
                value: 5,
            },
            right: Int {
                token: Token(Int, "4", (0,4)->(0,5)),
                value: 4,
            },
        },
        right: Infix {
            token: Token(LT, "<", (0,11)->(0,12)),
            left: Int {
                token: Token(Int, "3", (0,9)->(0,10)),
                value: 3,
            },
            right: Int {
                token: Token(Int, "4", (0,13)->(0,14)),
                value: 4,
            },
        },
    },
]
