src/snapshots/monkey_language_server__parser__test__operator_precedence_21.snap
---
source: src/parser.rs
description: 2 / (5 + 5)
expression: stmts
---
[
    Infix {
        token: Token(ForwardSlash, "/", (0,2)->(0,3)),
        left: Int {
            token: Token(Int, "2", (0,0)->(0,1)),
            value: 2,
        },
        right: Infix {
            token: Token(Plus, "+", (0,7)->(0,8)),
            left: Int {
                token: Token(Int, "5", (0,5)->(0,6)),
                value: 5,
            },
            right: Int {
                token: Token(Int, "5", (0,9)->(0,10)),
                value: 5,
            },
        },
    },
]
